# raytracer

./: CMakeLists.txt  doxygen.txt  main.c
img/: test.ppm  test2.ppm  tiles.ppm  underwater.ppm
lib/image/: CMakeLists.txt  image.c  image.h
lib/material/: CMakeLists.txt  material.c  material.h
lib/matrix/: matrix.h
lib/ray/: CMakeLists.txt  ray.c  ray.h
lib/scene/: CMakeLists.txt  light.h  scene.h  solid.c  solid.h
lib/vector/: CMakeLists.txt  vector.c  vector.h
